# myCLI

./: README.md  ls_v1.py  pyproject.toml  try.py
